# magic-documents

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/commands/: cache.rs  create.rs  daily.rs  last.rs  migrate.rs  mod.rs  obsidian.rs  rcal_tasks.rs  recent.rs  redir.rs  rename.rs  retag.rs  tman.rs  todo.rs
src/core/: config.rs  frontmatter.rs  mod.rs  note.rs  template.rs
src/tags/: cache.rs  mod.rs  parser.rs  primary_cache.rs  selector.rs  tree.rs
src/ui/: editor.rs  input.rs  mod.rs  prompts.rs
src/utils/: alias.rs  cli.rs  file.rs  mod.rs  vault.rs
src/vault/: scan.rs
